--- a/app/src/main/res/layout/activity_invate_friends.xml
+++ b/app/src/main/res/layout/activity_invate_friends.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.InvateFriendsActivity">
+    tools:context=".ui.PremiumActivity"
+    android:background="@drawable/backall">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:background="?selectableItemBackgroundBorderless"
+            android:onClick="shareBtn"
+            android:padding="8dp"
+            android:src="@drawable/share"
+             />
+
+
+
+</LinearLayout>
