--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -22,6 +22,7 @@
 
 
     <LinearLayout
+        android:onClick="signUpWithFacebook"
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_marginStart="80dp"
@@ -40,7 +41,6 @@
             android:tint="@android:color/white" />
 
         <TextView
-            android:onClick="signUpWithEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
