--- a/app/src/main/res/layout/activity_login_password.xml
+++ b/app/src/main/res/layout/activity_login_password.xml
@@ -32,6 +32,7 @@
     
 
     <Button
+        android:onClick="logIn"
         android:layout_marginTop="30dp"
         android:id="@+id/button"
         android:layout_width="match_parent"
