--- a/app/src/main/res/layout/activity_premium.xml
+++ b/app/src/main/res/layout/activity_premium.xml
@@ -10,14 +10,20 @@
 
 
     <Button
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="450dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:background="@drawable/button"/>
 
     <Button
-
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button"/>
+        android:layout_marginTop="30dp"
+        android:layout_height="70dp"
+        android:background="@drawable/button"
+        />
 
 </LinearLayout>
